# graphql-subscription-django

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
api/api/: asgi.py  settings.py  urls.py  ws_urls.py
api/graphql_subscription/: apps.py  models.py  schema.py  tests.py
